src/test/ui/generic-associated-types/issue-91883.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/issue-91883.rs:30:24
   |
LL |     type Cursor<'tx>: Cursor<'tx>
   |     ----------------------------- definition of `Cursor` from trait
...
LL |     type Cursor<'tx> = CursorImpl<'tx>;
   |                        ^^^^^^^^^^^^^^^- help: try copying these clauses from the trait: `where 'db: 'tx, Self: 'tx`
   |
note: lifetime parameter instantiated with the lifetime `'db` as defined here
  --> $DIR/issue-91883.rs:29:6
   |
LL | impl<'db> Transaction<'db> for TransactionImpl<'db> {
   |      ^^^
note: but lifetime parameter must outlive the lifetime `'tx` as defined here
  --> $DIR/issue-91883.rs:30:17
   |
LL |     type Cursor<'tx> = CursorImpl<'tx>;
   |                 ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
